Maybe this will compile?

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,8 @@ ARCHIVE=ar
 
 COMP=${PREFIX}${PROG}${COMP_VERSION}
 CC_ARGS=-std=c++17 ${INCLUDE} ${DEBUG} ${USER_CC_ARGS} -c
-LIBS_ARGS=${LIB_PATH} -Wl,-B${LINK_TYPE} ${LIBS} -Wl,-Bdynamic
+LIBS_ARGS=${LIB_PATH} ${LIBS}
+# -Wl,-B${LINK_TYPE} ${LIBS} -Wl,-Bdynamic
 LD=${COMP} ${USER_CC_ARGS}
 CC=${COMP} ${CC_ARGS}
 AR=${ARCHIVE} rvs
