--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ Build_Alpine:
   stage: build
   image: reg.handtruth.com/mc/mcshub/build-alpine:latest
   script:
-    - ./configure --target="x86_64-alpine-linux-musl" --gcc-version=8
+    - ./configure --target="x86_64-alpine-linux-musl"
     - make
   tags: ["default"]
   artifacts:
@@ -51,7 +51,7 @@ Test_X86_64:
 Memcheck_X86_64:
   stage: test
   script:
-    - ./configure --target="x86_64-linux-gnu" --debug
+    - ./configure --target="x86_64-linux-gnu" --gcc-version=8 --debug
     - make test DBG="valgrind --error-exitcode=1 --leak-check=full --tool=memcheck --track-origins=yes"
   tags: ["default"]
   dependencies: []
