--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,7 +60,8 @@ AlpineDockerImage:
     DOCKER_HOST: tcp://docker:2375/
     IMAGE_TAG: $CI_REGISTRY_IMAGE:latest
   services:
-    - docker:dind
+    - name: docker:dind
+      entrypoint: ["dockerd", "--host=tcp://0.0.0.0:2375"]
   script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
     - docker build -t $IMAGE_TAG -f Dockerfile.alpine .
