--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,6 +73,21 @@ AlpineDockerImage:
   dependencies:
     - Build_Alpine
 
+Deploy:
+  stage: deploy
+  image: docker:stable
+  variables:
+    IMAGE_TAG: $CI_REGISTRY_IMAGE:latest
+  script:
+    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+    - docker pull $IMAGE_TAG
+    - docker rm mcsnet-mcshub
+    - docker restart mcsman
+  tags: ["deploy"]
+  only:
+    - master
+  dependencies: []
+
 cache:
   paths:
     - dep
