--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,7 +89,9 @@
         "xlocmes": "cpp",
         "xlocmon": "cpp",
         "xloctime": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "memory_resource": "cpp",
+        "random": "cpp"
     },
     "files.exclude": {
         "src/*.d": true,
