--- a/src/meson.build
+++ b/src/meson.build
@@ -22,4 +22,5 @@ sources += configure_file(output : 'config.cpp', input : 'config.cpp.in',
 
 static_lib = static_library(meson.project_name(), [sources, res_header, res_source], dependencies: module_deps)
 exe = executable(meson.project_name(), ['main.cpp', res_header], link_with : static_lib, install : true, dependencies : module_deps)
+mcping = executable('mcping', 'pingtool.cpp', link_with : static_lib, install : true, dependencies : module_deps)
 run_target('run', command : [exe] + get_option('run_args'), depends : exe)
