Resolve "MCSHub подменяет сервера между собой"

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,8 +72,7 @@ Test:x86_64-linux-gnu: &test
     MESON_TESTTHREADS: 1
   script:
     - cd build/$TARGET
-    - meson test --wrap='valgrind --error-exitcode=1 --leak-check=full --tool=memcheck --track-origins=yes'
-    - cat meson-logs/testlog-valgrind.txt
+    - meson test --print-errorlogs --wrap='valgrind --error-exitcode=1 --leak-check=full --tool=memcheck --track-origins=yes'
   tags: ["default"]
   artifacts:
     paths:
