--- a/src/meson.build
+++ b/src/meson.build
@@ -1,10 +1,12 @@
 sources = files([
-  'client.cpp',
+  'mcshub_arguments.cpp',
+  'cli.cpp',
+  'gate.cpp',
   'hosts_db.cpp',
   'manager.cpp',
   'mc_pakets.cpp',
   'mcshub.cpp',
-  'prog_args.cpp',
+  'portal.cpp',
   'response_props.cpp',
   'sclient.cpp',
   'settings.cpp',
