--- a/test/meson.build
+++ b/test/meson.build
@@ -3,7 +3,7 @@ test_names = [
   'distributed_test',
   'config',
   'paket',
-  'status',
+  #'status',
   'vars',
   'fetch_status',
   'yaml',
@@ -15,7 +15,5 @@ test_files = []
 foreach test_name : test_names
   test_files += files(test_name + '.cpp')
   test_exe = executable(test_name + '.test', [test_files[-1], res_header], link_with : static_lib, include_directories : src, dependencies : module_deps)
-  test(test_name, test_exe)
+  test(meson.project_name() + '-' + test_name, test_exe, suite : 'unit')
 endforeach
-
-sh = find_program('sh')
