Squashed commit of the following:
commit 5a36783b6d175b693eb9c664a6ae885fc1ae3414
Author: ktlo <ktlo@handtruth.com>
Date:   Wed Jun 16 16:39:01 2021 +0000

    Update changelog and readme

commit 05796a8799277159c57019e9e4ef80ce3a37b396
Author: ktlo <ktlo@handtruth.com>
Date:   Wed Jun 16 13:49:15 2021 +0000

    Fixed release v1 build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -176,8 +176,9 @@ AlpineDockerImage:
     - docker push $IMAGE_TAG
     - docker rmi $IMAGE_TAG
   tags: ["docker"]
-  only:
-    - master
+  rules:
+    - if: $CI_COMMIT_BRANCH == "release-2.0.0"
+      when: always
   dependencies:
     - Package:x86_64-alpine-linux-musl
 
@@ -194,8 +195,9 @@ Deploy:
     - docker rm mcsnet-mcshub
     - docker restart mcsman
   tags: ["deploy"]
-  only:
-    - master
+  rules:
+    - if: $CI_COMMIT_BRANCH == "release-2.0.0"
+      when: always
   cache:
     paths: []
   dependencies: []
